# netcap

./: .gitignore  Cargo.toml  Dockerfile  README.md  financial_report_wizard.py  financial_report_wizard_v2.py  financial_reports_menu.xml
.cargo/: config.toml
.github/workflows/: android.yml  ci.yml  ios.yml  release.yml
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/kotlin/com/netcap/bridge/: NetcapBridge.kt
budget_module/: __manifest__.py
budget_module/models/: budget.py
budget_module/security/: ir.model.access.csv
budget_module/views/: budget_views.xml  menu.xml
config/: netcap.example.toml
crates/netcap-cli/: Cargo.toml
crates/netcap-cli/src/: args.rs  config.rs  main.rs  output.rs
crates/netcap-cli/src/commands/: capture.rs  cert.rs  mod.rs  replay.rs
crates/netcap-core/: Cargo.toml
crates/netcap-core/src/: config.rs  error.rs  lib.rs
crates/netcap-core/src/capture/: body.rs  exchange.rs  mod.rs
crates/netcap-core/src/filter/: mod.rs  pattern.rs
crates/netcap-core/src/proxy/: connection.rs  handler.rs  mod.rs
crates/netcap-core/src/storage/: buffer.rs  dispatcher.rs  mod.rs
crates/netcap-core/src/tls/: ca.rs  mod.rs  server_cert.rs  store.rs
crates/netcap-core/tests/: integration_test.rs
crates/netcap-ffi/: Cargo.toml  build.rs
crates/netcap-ffi/src/: error.rs  lib.rs  netcap.udl  proxy.rs  types.rs
crates/netcap-storage-bigquery/: Cargo.toml
crates/netcap-storage-bigquery/src/: batch.rs  lib.rs  schema.rs
crates/netcap-storage-jsonl/: Cargo.toml
crates/netcap-storage-jsonl/src/: lib.rs  rotation.rs  serializer.rs
crates/netcap-storage-pcap/: Cargo.toml
crates/netcap-storage-pcap/src/: converter.rs  lib.rs
crates/netcap-storage-sqlite/: Cargo.toml
crates/netcap-storage-sqlite/src/: lib.rs  queries.rs  schema.rs
crates/netcap-tui/: Cargo.toml
crates/netcap-tui/src/: app.rs  event.rs  lib.rs
crates/netcap-tui/src/ui/: detail_view.rs  mod.rs  request_list.rs  status_bar.rs
crates/odoo-bank-sync/: Cargo.toml
crates/odoo-bank-sync/src/: csv_parser.rs  main.rs  odoo.rs
dark_theme/: __manifest__.py
dark_theme/static/src/css/: dark_theme.css
docs/: 00_sow.md  01_library_selection.md  02_er_diagram.md  03_sequence_diagram.md  04_module_architecture.md  05_directory_structure.md  features.md
docs/evidence/: e2e_capture_report.md  final_report.md  phase1_report.md  phase2_report.md  phase3_report.md  phase4_report.md  phase5_report.md  phase6_report.md  phase7_report.md
docs/report/gitignore/: summary.md
docs/report/phase6/: summary.md  troubleshooting.md
docs/report/phase7/: summary.md  troubleshooting.md
docs/report/step1.1/: summary.md
docs/report/step1.2/: summary.md
docs/report/step1.3/: summary.md
docs/report/step1.4/: summary.md
docs/report/step1.5/: summary.md
docs/report/step1.6/: summary.md
docs/report/step1.7/: summary.md
docs/report/step2.1-2.4/: summary.md
docs/report/step3.5/: summary.md
docs/report/step4.4/: summary.md  troubleshooting.md
docs/report/step4.5/: summary.md
docs/report/step5.7/: summary.md
financial_reports/: __manifest__.py
financial_reports/security/: ir.model.access.csv
financial_reports/views/: financial_report_wizard_views.xml
ios/NetCap/Sources/: NetcapBridge.swift
planning_module/: __manifest__.py
planning_module/models/: __init__.py  planning.py
planning_module/security/: ir.model.access.csv
planning_module/views/: menu.xml  planning_views.xml
scripts/: build-android.sh  build-ios.sh  generate-bindings.sh  setup.sh
subscription_module/: __manifest__.py
subscription_module/data/: cron.xml
subscription_module/models/: subscription.py
subscription_module/security/: ir.model.access.csv
subscription_module/views/: menu.xml  subscription_views.xml
