[workspace]
resolver = "2"
members = [
    "crates/netcap-core",
    "crates/netcap-storage-sqlite",
    "crates/netcap-storage-jsonl",
    "crates/netcap-storage-pcap",
    "crates/netcap-storage-bigquery",
    "crates/netcap-ffi",
    "crates/netcap-cli",
    "crates/netcap-tui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tk-aria/netcap"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
hyper = { version = "1", features = ["full"] }
hyper-util = "0.1"
http = "1"
bytes = "1"
rustls = { version = "0.23", default-features = false, features = ["logging", "ring", "std", "tls12"] }
rcgen = "0.14"
hudsucker = { version = "0.21", features = ["rcgen-ca", "rustls-client", "decoder"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v7", "serde"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
pcap-file = "2"
gcp-bigquery-client = "0.27"
uniffi = "0.28"
clap = { version = "4.5", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
tokio-test = "0.4"
wiremock = "0.6"
tempfile = "3"
flate2 = "1"
brotli = "7"
dashmap = "6"
toml = "0.8"
