[package]
name = "netcap-ffi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["lib", "cdylib"]
name = "netcap_ffi"

[dependencies]
netcap-core = { path = "../netcap-core" }
netcap-storage-jsonl = { path = "../netcap-storage-jsonl" }
uniffi = { workspace = true, features = ["build"] }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }
