[package]
name = "netcap-storage-bigquery"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
netcap-core = { path = "../netcap-core" }
gcp-bigquery-client = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
http = { workspace = true }
uuid = { workspace = true }
tempfile = { workspace = true }
