[package]
name = "netcap-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
netcap-core = { path = "../netcap-core" }
ratatui = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
bytes = { workspace = true }
chrono = { workspace = true }
http = { workspace = true }
uuid = { workspace = true }
